apps/dev/user/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: hashicorp/http-echo
          args:
            - "-text=Hello from User Service"
          ports:
            - containerPort: 5678
